Adding random location names Making Header a component Making Header display a random Glyphicon

--- a/src/Location.html
+++ b/src/Location.html
@@ -1,7 +1,210 @@
-<h2>I am location: {{test}}</h2>
+<h2>Locations</h2>
+
+<table class="table table-striped table-hover">
+    <tbody>
+{{#each iterationArray(10) as number}}
+        <tr class="text-center">
+            <td>{{randomLocationName()}}</td>
+            <td>{{randomLocationName()}}</td>
+        </tr>
+{{/each}}
+    </tbody>
+</table>
 
 <script type="text/javascript">
+    var names = [
+        'Really Dangerous', 
+        'Uncanny', 
+        'Forbidden', 
+        'Fantasy', 
+        'Dire', 
+        'Galloping', 
+        'Cartoon', 
+        'Miyazaki', 
+        'Silicon', 
+        'Frictional', 
+        'Barked', 
+        'Rough', 
+        'Hilly', 
+        'Vile', 
+        'Swampy', 
+        'Marshy', 
+        'Jarvis', 
+        'Andrews', 
+        'Entombed', 
+        'Magical', 
+        'Rocky', 
+        'Dark', 
+        'Beautiful', 
+        'Autumnal', 
+        'Villainous', 
+        'Calm', 
+        'Eastern', 
+        'Western', 
+        'Northern', 
+        'Southern', 
+        'Far', 
+        'Queens', 
+        'Uncharted', 
+        'Unplottable', 
+        'Marble', 
+        'Paper', 
+        'Golden', 
+        'Smokey', 
+        'Foggy', 
+        'Misty', 
+        'Rainy', 
+        'Thunder', 
+        'Windy', 
+        'Big Boss', 
+        'Smugglers', 
+        'Neon', 
+        'Blue', 
+        'Red', 
+        'Endless', 
+        'Wooded', 
+        'Flooded', 
+        'Godrics', 
+        'Salazaars', 
+        'Helgas', 
+        'Rowenas', 
+        'Hogwarts', 
+        'Bills', 
+        'Cao Cao', 
+        'Liu Bai', 
+        'Liu Bai', 
+        'Wai Lin', 
+        'Bo Hao', 
+        'Su Mai', 
+        'Har Gao', 
+        'Shigeru', 
+        'Miyamoto',  
+        'Rollo', 
+        'Solar', 
+        'Lam', 
+        'Sinoma', 
+        'Rubico', 
+        'Sino', 
+        'Kappa'
+    ];
+
+    var locations = [
+        'Roads', 
+        'Valley', 
+        'Forest', 
+        'Fields', 
+        'Docks', 
+        'Gorge', 
+        'Encampment', 
+        'Jungle', 
+        'Plains', 
+        'Temple', 
+        'Farmlands', 
+        'Gulley', 
+        'Outcrop', 
+        'Trails', 
+        'Drylands', 
+        'Ocean', 
+        'Ethereal Plane', 
+        'Labyrinth', 
+        'Crag', 
+        'Cliffs', 
+        'Cavern', 
+        'Cave', 
+        'Mountain', 
+        'Sea', 
+        'Lake', 
+        'River', 
+        'Archives', 
+        'Dungeon', 
+        'Village', 
+        'Megacity', 
+        'Megalopolis', 
+        'Path', 
+        'Cove', 
+        'Bay', 
+        'Desert', 
+        'Casino', 
+        'Hideout', 
+        'Gardens', 
+        'Glade', 
+        'Hollow', 
+        'School', 
+        'Way', 
+        'Volcano', 
+        'Maze', 
+        'House', 
+        'passage', 
+        'Pass', 
+        'Ports', 
+        'Belt', 
+        'Starscape', 
+        'Plaza', 
+        'Ministry', 
+        'Castle'
+    ];
+
+    var attributes = [
+        'Death', 
+        'Life', 
+        'Sacrifice', 
+        'Innovation', 
+        'Networking', 
+        'Magic', 
+        'Confusion', 
+        'Imminent Death', 
+        'Unity', 
+        'Harmony', 
+        'Chaos', 
+        'Entropy', 
+        'Order', 
+        'Unpredictability', 
+        'Resolution', 
+        'GabeN', 
+        'Time', 
+        'Fire', 
+        'Air', 
+        'Earth', 
+        'Water', 
+        'Lightening', 
+        'Jasaar', 
+        'Mystery', 
+        'Jas’kar', 
+        'Clarity', 
+        'Susan Jessica', 
+        'Witchcraft and Wizardry', 
+        'Might', 
+        'Advancement', 
+        'Popularity', 
+        'Ja’den Dionne', 
+        'Feline Dion', 
+        'Deon Blaster', 
+        'Power Tennis'
+    ];
+
+    function randomArrayItem(array) {
+        return array[~~(Math.random()*array.length)];
+    }
+
     export default {
+        helpers: {
+            randomLocationName: function() {
+                var locationName = randomArrayItem(names) + " " + randomArrayItem(locations);
+
+                if (Math.random() > 0.15) {
+                    locationName += " of " + randomArrayItem(attributes);
+                }
+
+                return locationName;
+            },
+            iterationArray: function(length) {
+                var array = [];
+                for(var i=0; i<length; i++) {
+                    array.push(i);
+                }
+                return array;
+            }
+        },
         data() {
             return {
                 test: "Hello world"
