Changing Location generator attribute frequency

--- a/src/Location.html
+++ b/src/Location.html
@@ -13,172 +13,172 @@
 
 <script type="text/javascript">
     var names = [
-        'Really Dangerous', 
-        'Uncanny', 
-        'Forbidden', 
-        'Fantasy', 
-        'Dire', 
-        'Galloping', 
-        'Cartoon', 
-        'Miyazaki', 
-        'Silicon', 
-        'Frictional', 
-        'Barked', 
-        'Rough', 
-        'Hilly', 
-        'Vile', 
-        'Swampy', 
-        'Marshy', 
-        'Jarvis', 
-        'Andrews', 
-        'Entombed', 
-        'Magical', 
-        'Rocky', 
-        'Dark', 
-        'Beautiful', 
-        'Autumnal', 
-        'Villainous', 
-        'Calm', 
-        'Eastern', 
-        'Western', 
-        'Northern', 
-        'Southern', 
-        'Far', 
-        'Queens', 
-        'Uncharted', 
-        'Unplottable', 
-        'Marble', 
-        'Paper', 
-        'Golden', 
-        'Smokey', 
-        'Foggy', 
-        'Misty', 
-        'Rainy', 
-        'Thunder', 
-        'Windy', 
-        'Big Boss', 
-        'Smugglers', 
-        'Neon', 
-        'Blue', 
-        'Red', 
-        'Endless', 
-        'Wooded', 
-        'Flooded', 
-        'Godrics', 
-        'Salazaars', 
-        'Helgas', 
-        'Rowenas', 
-        'Hogwarts', 
-        'Bills', 
-        'Cao Cao', 
-        'Liu Bai', 
-        'Liu Bai', 
-        'Wai Lin', 
-        'Bo Hao', 
-        'Su Mai', 
-        'Har Gao', 
-        'Shigeru', 
-        'Miyamoto',  
-        'Rollo', 
-        'Solar', 
-        'Lam', 
-        'Sinoma', 
-        'Rubico', 
-        'Sino', 
+        'Really Dangerous',
+        'Uncanny',
+        'Forbidden',
+        'Fantasy',
+        'Dire',
+        'Galloping',
+        'Cartoon',
+        'Miyazaki',
+        'Silicon',
+        'Frictional',
+        'Barked',
+        'Rough',
+        'Hilly',
+        'Vile',
+        'Swampy',
+        'Marshy',
+        'Jarvis',
+        'Andrews',
+        'Entombed',
+        'Magical',
+        'Rocky',
+        'Dark',
+        'Beautiful',
+        'Autumnal',
+        'Villainous',
+        'Calm',
+        'Eastern',
+        'Western',
+        'Northern',
+        'Southern',
+        'Far',
+        'Queens',
+        'Uncharted',
+        'Unplottable',
+        'Marble',
+        'Paper',
+        'Golden',
+        'Smokey',
+        'Foggy',
+        'Misty',
+        'Rainy',
+        'Thunder',
+        'Windy',
+        'Big Boss',
+        'Smugglers',
+        'Neon',
+        'Blue',
+        'Red',
+        'Endless',
+        'Wooded',
+        'Flooded',
+        'Godrics',
+        'Salazaars',
+        'Helgas',
+        'Rowenas',
+        'Hogwarts',
+        'Bills',
+        'Cao Cao',
+        'Liu Bai',
+        'Liu Bai',
+        'Wai Lin',
+        'Bo Hao',
+        'Su Mai',
+        'Har Gao',
+        'Shigeru',
+        'Miyamoto',
+        'Rollo',
+        'Solar',
+        'Lam',
+        'Sinoma',
+        'Rubico',
+        'Sino',
         'Kappa'
     ];
 
     var locations = [
-        'Roads', 
-        'Valley', 
-        'Forest', 
-        'Fields', 
-        'Docks', 
-        'Gorge', 
-        'Encampment', 
-        'Jungle', 
-        'Plains', 
-        'Temple', 
-        'Farmlands', 
-        'Gulley', 
-        'Outcrop', 
-        'Trails', 
-        'Drylands', 
-        'Ocean', 
-        'Ethereal Plane', 
-        'Labyrinth', 
-        'Crag', 
-        'Cliffs', 
-        'Cavern', 
-        'Cave', 
-        'Mountain', 
-        'Sea', 
-        'Lake', 
-        'River', 
-        'Archives', 
-        'Dungeon', 
-        'Village', 
-        'Megacity', 
-        'Megalopolis', 
-        'Path', 
-        'Cove', 
-        'Bay', 
-        'Desert', 
-        'Casino', 
-        'Hideout', 
-        'Gardens', 
-        'Glade', 
-        'Hollow', 
-        'School', 
-        'Way', 
-        'Volcano', 
-        'Maze', 
-        'House', 
-        'passage', 
-        'Pass', 
-        'Ports', 
-        'Belt', 
-        'Starscape', 
-        'Plaza', 
-        'Ministry', 
+        'Roads',
+        'Valley',
+        'Forest',
+        'Fields',
+        'Docks',
+        'Gorge',
+        'Encampment',
+        'Jungle',
+        'Plains',
+        'Temple',
+        'Farmlands',
+        'Gulley',
+        'Outcrop',
+        'Trails',
+        'Drylands',
+        'Ocean',
+        'Ethereal Plane',
+        'Labyrinth',
+        'Crag',
+        'Cliffs',
+        'Cavern',
+        'Cave',
+        'Mountain',
+        'Sea',
+        'Lake',
+        'River',
+        'Archives',
+        'Dungeon',
+        'Village',
+        'Megacity',
+        'Megalopolis',
+        'Path',
+        'Cove',
+        'Bay',
+        'Desert',
+        'Casino',
+        'Hideout',
+        'Gardens',
+        'Glade',
+        'Hollow',
+        'School',
+        'Way',
+        'Volcano',
+        'Maze',
+        'House',
+        'passage',
+        'Pass',
+        'Ports',
+        'Belt',
+        'Starscape',
+        'Plaza',
+        'Ministry',
         'Castle'
     ];
 
     var attributes = [
-        'Death', 
-        'Life', 
-        'Sacrifice', 
-        'Innovation', 
-        'Networking', 
-        'Magic', 
-        'Confusion', 
-        'Imminent Death', 
-        'Unity', 
-        'Harmony', 
-        'Chaos', 
-        'Entropy', 
-        'Order', 
-        'Unpredictability', 
-        'Resolution', 
-        'GabeN', 
-        'Time', 
-        'Fire', 
-        'Air', 
-        'Earth', 
-        'Water', 
-        'Lightening', 
-        'Jasaar', 
-        'Mystery', 
-        'Jas’kar', 
-        'Clarity', 
-        'Susan Jessica', 
-        'Witchcraft and Wizardry', 
-        'Might', 
-        'Advancement', 
-        'Popularity', 
-        'Ja’den Dionne', 
-        'Feline Dion', 
-        'Deon Blaster', 
+        'Death',
+        'Life',
+        'Sacrifice',
+        'Innovation',
+        'Networking',
+        'Magic',
+        'Confusion',
+        'Imminent Death',
+        'Unity',
+        'Harmony',
+        'Chaos',
+        'Entropy',
+        'Order',
+        'Unpredictability',
+        'Resolution',
+        'GabeN',
+        'Time',
+        'Fire',
+        'Air',
+        'Earth',
+        'Water',
+        'Lightening',
+        'Jasaar',
+        'Mystery',
+        'Jas’kar',
+        'Clarity',
+        'Susan Jessica',
+        'Witchcraft and Wizardry',
+        'Might',
+        'Advancement',
+        'Popularity',
+        'Ja’den Dionne',
+        'Feline Dion',
+        'Deon Blaster',
         'Power Tennis'
     ];
 
@@ -191,7 +191,7 @@
             randomLocationName: function() {
                 var locationName = randomArrayItem(names) + " " + randomArrayItem(locations);
 
-                if (Math.random() > 0.15) {
+                if (Math.random() <= 0.15) {
                     locationName += " of " + randomArrayItem(attributes);
                 }
 
