--- a/src/Location.html
+++ b/src/Location.html
@@ -1,16 +1,68 @@
+<!-- Markup -->
 <h2>Locations</h2>
+
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="controlPanelHeading">
+            <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#controlsPanel" aria-expanded="true" aria-controls="controlsPanel">Controls <small><em>Click to toggle</em></small></a>
+            </h4>
+        </div>
+        <div id="controlsPanel" class="panel-collapse collapse" role="tabpanel" aria-labelledby="controlPanelHeading">
+            <div class="panel-body">
+                <form class="form-horizontal">
+                    <!-- Rows -->
+                    <div class="form-group">
+                        <label for="rowInput" class="col-sm-2 control-label">Rows</label>
+                        <div class="col-sm-10">
+                            <input type="number" 
+                                class="form-control" 
+                                id="rowInput" 
+                                bind:value="numRows" 
+                                min="1" 
+                            />
+                        </div>
+                    </div>
+
+                    <!-- Columns -->
+                    <div class="form-group">
+                        <label for="colInput" class="col-sm-2 control-label">Columns</label>
+                        <div class="col-sm-10">
+                            <input type="number" 
+                                class="form-control" 
+                                id="colInput" 
+                                bind:value="numColumns" 
+                                min="1" 
+                            />
+                        </div>
+                    </div>
+
+                    <!-- Update Buttons -->
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="button" class="btn btn-primary" on:click="set({ generatedLocationRows: generateLocationNames(numRows, numColumns)})">Update</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 <table class="table table-striped table-hover">
     <tbody>
-{{#each iterationArray(10) as number}}
+        {{#each generatedLocationRows as row}}
         <tr class="text-center">
-            <td>{{randomLocationName()}}</td>
-            <td>{{randomLocationName()}}</td>
+            {{#each row as generatedLocation}}
+            <td>{{generatedLocation}}</td>
+            {{/each}}
         </tr>
-{{/each}}
+        {{/each}}
     </tbody>
 </table>
 
+
+<!-- Code -->
 <script type="text/javascript">
     var names = [
         'Really Dangerous',
@@ -134,7 +186,7 @@
         'Volcano',
         'Maze',
         'House',
-        'passage',
+        'Passage',
         'Pass',
         'Ports',
         'Belt',
@@ -178,37 +230,54 @@
         'Popularity',
         'Ja’den Dionne',
         'Feline Dion',
-        'Deon Blaster',
+        'Dion Blaster',
         'Power Tennis'
     ];
 
     function randomArrayItem(array) {
-        return array[~~(Math.random()*array.length)];
+        return array[~~(Math.random() * array.length)];
+    }
+
+    function randomLocationName() {
+        var locationName = randomArrayItem(names) + " " + randomArrayItem(locations);
+
+        if (Math.random() <= 0.15) {
+            locationName += " of " + randomArrayItem(attributes);
+        }
+
+        return locationName;
+    }
+
+    function generateLocationNames(numRows, namesPerRow) {
+        var names = [];
+        for (var row = 0; row < numRows; row++) {
+            var namesRow = [];
+            for (var col = 0; col < namesPerRow; col++) {
+                namesRow.push(randomLocationName());
+            }
+
+            names.push(namesRow);
+        }
+
+        return names;
     }
 
     export default {
         helpers: {
-            randomLocationName: function() {
-                var locationName = randomArrayItem(names) + " " + randomArrayItem(locations);
-
-                if (Math.random() <= 0.15) {
-                    locationName += " of " + randomArrayItem(attributes);
-                }
-
-                return locationName;
-            },
-            iterationArray: function(length) {
-                var array = [];
-                for(var i=0; i<length; i++) {
-                    array.push(i);
-                }
-                return array;
-            }
+            generateLocationNames: generateLocationNames
         },
-        data() {
+        onrender: function () {
+            this.set({
+                generatedLocationRows: generateLocationNames(this.get('numRows'), this.get('numColumns'))
+            })
+        },
+        data: function data() {
             return {
-                test: "Hello world"
+                generatedLocationRows: [],
+                numRows: 10,
+                numColumns: 3
             }
         }
     }
+
 </script>
