Adding dry dry docks feature for locations

--- a/src/Location.html
+++ b/src/Location.html
@@ -239,7 +239,15 @@
     }
 
     function randomLocationName() {
-        var locationName = randomArrayItem(names) + " " + randomArrayItem(locations);
+        var name = randomArrayItem(names);
+        
+        //Occasionally duplicate first name e.g. 
+        if(name.indexOf(' ') === -1 && Math.random() < 0.04) {
+            console.log("Duplication!");
+            name = name + " " + name;
+        }
+
+        var locationName = name + " " + randomArrayItem(locations);
 
         if (Math.random() <= 0.15) {
             locationName += " of " + randomArrayItem(attributes);
