Add favicon to project, fix HTML titles

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>InspirationEngine</title>
+    <title>Inspiration Engine</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=rMlNzPbEL7">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=rMlNzPbEL7">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=rMlNzPbEL7">
+    <link rel="manifest" href="/site.webmanifest?v=rMlNzPbEL7">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=rMlNzPbEL7" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon.ico?v=rMlNzPbEL7">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="theme-color" content="#ffffff">
 
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
@@ -36,7 +46,6 @@
         }
       })(window.location);
     </script>
-    <!-- End Single Page Apps for GitHub Pages -->
     
     {{content-for "head"}}
 
